# setup_assistant

./: Cargo.toml  build.rs
external_resources/registy_restore/: Cargo.toml  build.rs
external_resources/registy_restore/src/: constants.rs  main.rs
src/: constants.rs  main.rs  registry_handler.rs  utilities.rs  xml_handler.rs
