[package]
name = "setup_assistant"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
log4rs = "1.3.0"
winreg = "0.52.0"
winapi = { version = "0.3.9", features = ["winuser", "wow64apiset", "processthreadsapi"] }
winres = "0.1.12"
serde_json = "1.0.114"
serde = "1.0.197"

[build-dependencies]
static_vcruntime = "2.0"
winres = "0.1.12"
